He's champin' for a clampin'!